[package]
name = "steam-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
config = "0.13.3"
reqwest = { version = "0.11.20", features = ["blocking"] }
scraper = "0.17.1"

[[bin]]
name = "test"
path = "src/main.rs"
